--- a/FArfdo.html
+++ b/FArfdo.html
@@ -389,7 +389,7 @@
             <ul class="dropdown-menu">
                 
                 <li class="nested-dropdown">
-                    <a href="procurement.html">จัดซื้อจัดจ้าง ▸</a>
+                    <a href="#">จัดซื้อจัดจ้าง ▸</a>
                     <ul class="submenu">
                         <li><a href="procurement_plan.html">แผนการจัดซื้อจัดจ้าง</a></li>
                         <li><a href="procurement_draft.html">ประกาศร่างขอบเขตของงานฯ</a></li>
