--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
             <a href="#">ข่าวสาร ▾</a>
             <ul class="dropdown-menu">
                 <li class="nested-dropdown">
-                    <a href="procurement.html">จัดซื้อจัดจ้าง ▸</a>
+                    <a href="#">จัดซื้อจัดจ้าง ▸</a>
                     <ul class="submenu">
                         <li><a href="procurement_plan.html">แผนการจัดซื้อจัดจ้าง</a></li>
                         <li><a href="procurement_draft.html">ประกาศร่างขอบเขตของงานฯ</a></li>
@@ -468,7 +468,7 @@
         <div class="procurement-wrapper">
             <div class="procurement-tabs">
                 <button class="tab-btn active" id="btn-plan" onclick="window.loadTable('plan')">แผนการจัดซื้อฯ</button>
-                <button class="tab-btn" id="btn-draft" onclick="window.loadTable('draft')">ร่างขอบเขตงาน (TOR)</button>
+                <button class="tab-btn" id="btn-draft" onclick="window.loadTable('draft')">ประกาศร่างขอบเขตงาน (TOR)</button>
                 <button class="tab-btn" id="btn-announce" onclick="window.loadTable('announce')">ประกาศจัดซื้อฯ</button>
                 <button class="tab-btn" id="btn-winner" onclick="window.loadTable('winner')">ประกาศผู้ชนะ</button>
             </div>
