--- a/procurement_draft.html
+++ b/procurement_draft.html
@@ -17,50 +17,157 @@
             --primary-dark: #206b6b;
             --primary-light: #e6f7f7;
             --text-color: #333;
+            --text-muted: #666;
             --bg-color: #f8fcfc;
             --white: #ffffff;
+            --shadow-sm: 0 4px 6px rgba(0,0,0,0.05);
             --shadow-md: 0 10px 15px rgba(0,0,0,0.08);
             --radius: 12px;
         }
 
+        /* === General Styles === */
         body {
-            margin: 0; background-color: var(--bg-color);
-            font-family: "Prompt", sans-serif; color: var(--text-color);
-            line-height: 1.6; display: flex; flex-direction: column; min-height: 100vh;
+            margin: 0;
+            background-color: var(--bg-color);
+            font-family: "Prompt", sans-serif;
+            color: var(--text-color);
+            line-height: 1.6;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
         }
 
-        img { user-select: none; pointer-events: none; }
-        a, button { pointer-events: auto !important; cursor: pointer; }
+        /* ป้องกันการเซฟรูปภาพ */
+        img {
+            user-select: none; -webkit-user-select: none; -moz-user-select: none;
+            pointer-events: none; -webkit-user-drag: none;
+        }
+        a, button, .dropdown:hover > a, .quick-links li a { 
+            pointer-events: auto !important; cursor: pointer; 
+        }
 
-        /* === Header Section === */
+        /* === Header Section (New Style) === */
         .head-section {
             position: relative;
             background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.5)), url('images/head.jpg') no-repeat center center;
-            background-size: cover; display: flex; flex-direction: row; align-items: center;
-            padding: 60px 5%; min-height: 250px; gap: 20px; color: var(--white);
+            background-size: cover;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: flex-start;
+            padding: 60px 5%;
+            min-height: 250px;
+            gap: 20px;
+            color: var(--white);
         }
-        .head-section img#logo { width: 100px; height: auto; filter: drop-shadow(0 4px 4px rgba(0,0,0,0.3)); }
-        .head-text { font-size: 48px; font-weight: 700; line-height: 1.2; text-shadow: 0 2px 4px rgba(0,0,0,0.5); }
-        .sub-text { font-size: 20px; opacity: 0.9; }
+        .head-section img#logo { 
+            width: 100px; height: auto; 
+            filter: drop-shadow(0 4px 4px rgba(0,0,0,0.3));
+        }
+        .head-text-container { display: flex; flex-direction: column; }
+        .head-text { 
+            font-size: 48px; font-weight: 700; line-height: 1.2; 
+            text-shadow: 0 2px 4px rgba(0,0,0,0.5);
+        }
+        .sub-text { font-size: 20px; font-weight: 400; opacity: 0.9; }
 
-        /* === Navigation === */
-        nav { background: var(--primary-color); padding: 0 20px; position: sticky; top: 0; z-index: 1000; box-shadow: 0 4px 12px rgba(0,0,0,0.15); }
-        nav ul { display: flex; justify-content: center; gap: 20px; list-style: none; margin: 0; padding: 5px 0; flex-wrap: wrap; max-width: 1600px; margin: 0 auto; align-items: center; }
+        /* === Navigation (New Structure & Style) === */
+        nav {
+            background: var(--primary-color);
+            padding: 0 20px;
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+        }
+
+        nav ul {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            list-style: none;
+            margin: 0;
+            padding: 5px 0;
+            flex-wrap: wrap;
+            align-items: center;
+            max-width: 1600px;
+            margin: 0 auto;
+        }
+
         nav ul li { position: relative; }
-        nav ul li a { text-decoration: none; color: white; font-size: 16px; padding: 8px 14px; border-radius: 30px; display: flex; align-items: center; gap: 6px; transition: 0.3s; }
-        nav ul li a:hover { background: rgba(255, 255, 255, 0.2); }
+
+        nav ul li a {
+            text-decoration: none;
+            color: rgba(255, 255, 255, 0.95);
+            font-size: 16px;
+            font-weight: 500;
+            padding: 8px 14px;
+            border-radius: 30px;
+            display: flex;
+            align-items: center;
+            gap: 6px;
+            transition: all 0.3s ease;
+            white-space: nowrap;
+        }
+
+        nav ul li a:hover, nav ul li a.active-link {
+            background: rgba(255, 255, 255, 0.2);
+            color: #fff;
+            transform: translateY(-1px);
+        }
+
         .home-icon { background: rgba(255,255,255,0.2) !important; padding: 8px 12px !important; }
+        .home-icon svg { fill: white; width: 24px; height: 24px; }
+        .home-icon:hover { background: rgba(255,255,255,0.4) !important; }
 
-        /* Dropdown */
-        .dropdown-menu { display: none; position: absolute; top: 100%; left: 0; background: white; border-radius: 8px; box-shadow: 0 10px 30px rgba(0,0,0,0.15); min-width: 270px; padding: 8px 0; z-index: 1001; margin-top: 10px; }
+        /* Dropdown & Nested Menu (Invisible Bridge Technique) */
+        .dropdown-menu {
+            display: none;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            background: var(--white);
+            border-radius: 8px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+            min-width: 270px;
+            padding: 8px 0;
+            z-index: 1001;
+            opacity: 0;
+            transition: all 0.2s;
+            border: 1px solid rgba(0,0,0,0.05);
+            margin-top: 10px;
+        }
+        .dropdown-menu::before {
+            content: ""; position: absolute; top: -10px; left: 0;
+            width: 100%; height: 10px; background: transparent;
+        }
         .dropdown:hover > .dropdown-menu { display: block; opacity: 1; animation: fadeIn 0.2s ease-out forwards; }
-        .dropdown-menu li a { color: var(--text-color); border-radius: 0; justify-content: space-between; padding: 12px 20px; }
-        .dropdown-menu li a:hover { background: var(--primary-light); color: var(--primary-dark); }
-        
-        .submenu { display: none; position: absolute; left: 100%; top: -5px; margin-left: 10px; background: white; border-radius: 8px; min-width: 290px; padding: 8px 0; box-shadow: 0 10px 30px rgba(0,0,0,0.15); }
-        .nested-dropdown:hover > .submenu { display: block; }
+        .dropdown-menu li { position: relative; }
+        .dropdown-menu li a { 
+            color: var(--text-color); padding: 12px 20px; 
+            border-radius: 0; display: flex; justify-content: space-between; 
+            font-size: 16px; font-weight: 500;
+        }
+        .dropdown-menu li a:hover { background: var(--primary-light); color: var(--primary-dark); padding-left: 25px; }
 
+        .submenu {
+            display: none;
+            position: absolute;
+            left: 100%; top: -5px; margin-left: 10px;
+            background: var(--white);
+            border-radius: 8px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+            min-width: 290px;
+            padding: 8px 0;
+            border: 1px solid rgba(0,0,0,0.05);
+        }
+        .submenu::after {
+            content: ""; position: absolute; top: 0; left: -15px; 
+            width: 20px; height: 100%; background: transparent;
+        }
+        .nested-dropdown:hover > .submenu { display: block; animation: fadeIn 0.2s ease-out forwards; }
         @keyframes fadeIn { from { opacity: 0; transform: translateY(5px); } to { opacity: 1; transform: translateY(0); } }
+
 
         /* === Accordion & Content === */
         main.content-container { flex-grow: 1; width: 100%; max-width: 1000px; margin: 40px auto; padding: 40px; background: var(--white); border-radius: var(--radius); box-shadow: var(--shadow-md); box-sizing: border-box; }
