--- a/official_co.html
+++ b/official_co.html
@@ -403,7 +403,7 @@
                 const fileIdMatch = fileUrl.match(/\/d\/([a-zA-Z0-9_-]+)/); 
                 if (fileIdMatch && fileIdMatch[1]) {
                     const fileId = fileIdMatch[1];
-                    fileUrl = `https://drive.google.com/uc?export=download&id=${fileId}`; 
+                    fileUrl = `https://drive.google.com/file/d/${id}/view`; 
                 }
             }
             
@@ -419,4 +419,5 @@
 </script>
 
 </body>
+
 </html>
