Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
         <div class="section-title">ข่าวประชาสัมพันธ์</div>
         <div class="slideshow-container">
             <div class="slide-track">
+                <div class="slide-item"><img src="images/work15.jpg" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work14.png" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work13.png" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work12.png" class="zoomable"></div>
