--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
         <div class="section-title">ข่าวประชาสัมพันธ์</div>
         <div class="slideshow-container">
             <div class="slide-track">
+                <div class="slide-item"><img src="images/work17.png" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work16.png" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work15.jpg" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work14.png" class="zoomable"></div>
