--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
         <div class="section-title">ข่าวประชาสัมพันธ์</div>
         <div class="slideshow-container">
             <div class="slide-track">
+                 <div class="slide-item"><img src="images/work20.jpg" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work19.png" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work18.png" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work17.png" class="zoomable"></div>
