--- a/Planrfdo.html
+++ b/Planrfdo.html
@@ -404,7 +404,7 @@
                 <img src="images/kedsuda.jpg" alt="รูปนางสาวเกศสุดา" style="width: 100%; height: 100%; object-fit: cover;">
             </div>
             <div class="person-name">นางสาวเกศสุดา เอกนิคม</div>
-            <div class="person-position">นักวิชาการป่าไม้ปฏิบัติการ <br> ทำหน้าที่รองหัวหน้าฝ่ายแผนและติดตามประเมินผล</div>
+            <div class="person-position">นักวิชาการป่าไม้ปฏิบัติการ</div>
         </div>
         
         <div class="personnel-grid-container">
