--- a/HRrfdo.html
+++ b/HRrfdo.html
@@ -487,7 +487,6 @@
                 <div class="person-position">นักจัดการงานทั่วไป</div>
             </div>
 
-            <div class="centered-row">
                 <div class="person-card">
                     <div class="person-image">
                         <img src="images/pornatcha.jpg" alt="รูปนางสาวพรนัชชา" style="width: 100%; height: 100%; object-fit: cover;"> 
@@ -495,6 +494,15 @@
                     <div class="person-name">นางสาวพรนัชชา แดงทอง</div>
                     <div class="person-position">นักจัดการงานทั่วไป</div>
                 </div>
+
+             <div class="person-card">
+                <div class="person-image">
+                    <img src="images/none.jpg" alt="นายณัฐวุฒิ คำศรี"> 
+                    <span style="display: none;">นายณัฐวุฒิ คำศรี</span>
+                </div>
+                <div class="person-name">นายณัฐวุฒิ คำศรี</div>
+                <div class="person-position">เจ้าพนักงานคอมพิวเตอร์</div>
+            </div>
                 
                 <div class="person-card">
                     <div class="person-image">
