--- a/Adminrfdo.html
+++ b/Adminrfdo.html
@@ -452,6 +452,14 @@
                 <div class="person-position">นักจัดการงานทั่วไป</div>
             </div>
             
+             <div class="person-card">
+                <div class="person-image">
+                    <img src="images/none.jpg" alt="นางสาวธิดารัตน์">
+                </div>
+                <div class="person-name">นางสาวธิดารัตน์ หลักหาญ</div>
+                <div class="person-position">เจ้าพนักงานการเงินและบัญชี <br> ประจำฝ่ายธุรการ อีกหน้าที่หนึ่ง</div>
+            </div>
+
             <div class="person-card">
                 <div class="person-image">
                     <img src="images/jidapa.jpg" alt="รูปนางสาวจิดาภา"> 
