--- a/PDrfdo.html
+++ b/PDrfdo.html
@@ -555,6 +555,14 @@
                 <div class="person-position">นักจัดการงานทั่วไป</div>
             </div>
 
+             <div class="person-card">
+                <div class="person-image">
+                    <img src="images/none.jpg" alt="นางสาวมณฑิตา">
+                </div>
+                <div class="person-name">นางสาวมณฑิตา หาดสุด</div>
+                <div class="person-position">เจ้าพนักงานการเงินและบัญชี</div>
+            </div>
+
             <div class="person-card">
                 <div class="person-image">
                     <img src="images/chairit.jpg" alt="รูปนายชัยฤทธิ์" style="width: 100%; height: 100%; object-fit: cover;"> 
