--- a/Adminrfdo.html
+++ b/Adminrfdo.html
@@ -454,7 +454,7 @@
             
              <div class="person-card">
                 <div class="person-image">
-                    <img src="images/none.jpg" alt="นางสาวธิดารัตน์">
+                    <img src="images/thidarat.png" alt="นางสาวธิดารัตน์">
                 </div>
                 <div class="person-name">นางสาวธิดารัตน์ หลักหาญ</div>
                 <div class="person-position">เจ้าพนักงานการเงินและบัญชี <br> ประจำฝ่ายธุรการ อีกหน้าที่หนึ่ง</div>
