Update print statement from 'Hello' to 'Goodbye'

--- a/Researchrfdo.html
+++ b/Researchrfdo.html
@@ -467,7 +467,7 @@
 
              <div class="person-card">
                 <div class="person-image">
-                    <img src="images/none.jpg" alt="นางสาวธิดารัตน์">
+                    <img src="images/thidarat.png" alt="นางสาวธิดารัตน์">
                 </div>
                 <div class="person-name">นางสาวธิดารัตน์ หลักหาญ</div>
                 <div class="person-position">เจ้าพนักงานการเงินและบัญชี</div>
