Update print statement from 'Hello' to 'Goodbye'

--- a/Planrfdo.html
+++ b/Planrfdo.html
@@ -475,7 +475,7 @@
 
              <div class="person-card">
                 <div class="person-image">
-                    <img src="images/none.jpg" alt="นางสาวอาทิตญา">
+                    <img src="images/atitaya.png" alt="นางสาวอาทิตญา">
                 </div>
                 <div class="person-name">นางสาวอาทิตญา บุญมี</div>
                 <div class="person-position">เจ้าพนักงานการเงินและบัญชี</div>
