--- a/Planrfdo.html
+++ b/Planrfdo.html
@@ -429,7 +429,7 @@
                 <div class="person-image">
                     <img src="images/chakkrit.jpg" alt="รูปนายจักกฤษณ์">
                 </div>
-                <div class="person-name">นายจักกฤษณ์ อภิญญาสุวรรณ</div>
+                <div class="person-name">นายจักรกฤษณ์ อภิญญาสุวรรณ</div>
                 <div class="person-position">นักประชาสัมพันธ์</div>
             </div>
 
