--- a/HRrfdo.html
+++ b/HRrfdo.html
@@ -497,7 +497,7 @@
 
              <div class="person-card">
                 <div class="person-image">
-                    <img src="images/none.jpg" alt="นายณัฐวุฒิ คำศรี"> 
+                    <img src="images/nuttawut.jpg" alt="นายณัฐวุฒิ คำศรี"> 
                     <span style="display: none;">นายณัฐวุฒิ คำศรี</span>
                 </div>
                 <div class="person-name">นายณัฐวุฒิ คำศรี</div>
