--- a/index.html
+++ b/index.html
@@ -197,6 +197,8 @@
         <div class="section-title">ข่าวประชาสัมพันธ์</div>
         <div class="slideshow-container">
             <div class="slide-track">
+                <div class="slide-item"><img src="images/work26.png" class="zoomable"></div>
+                <div class="slide-item"><img src="images/work25.png" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work24.jpg" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work23.png" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work22.png" class="zoomable"></div>
