Update print statement from 'Hello' to 'Goodbye'

--- a/Adminrfdo.html
+++ b/Adminrfdo.html
@@ -437,7 +437,7 @@
             <div class="person-card">
                 <div class="person-image">
                     <img src="images/parita.jpg" alt="รูปนางสาวปาริตา"> 
-                    <span style="display: none;">**ใส่รูป** นางสาวปาริตา</span>
+                    <span style="display: none;">นางสาวปาริตา</span>
                 </div>
                 <div class="person-name">นางสาวปาริตา มงคล</div>
                 <div class="person-position">นักจัดการงานทั่วไป</div>
@@ -446,7 +446,7 @@
             <div class="person-card">
                 <div class="person-image">
                     <img src="images/natthamon.jpg" alt="รูปนางสาวนัทธมน"> 
-                    <span style="display: none;">**ใส่รูป** นางสาวนัทธมน</span>
+                    <span style="display: none;">นางสาวนัทธมน</span>
                 </div>
                 <div class="person-name">นางสาวนัทธมน นุชบางเดื่อ</div>
                 <div class="person-position">นักจัดการงานทั่วไป</div>
@@ -463,7 +463,7 @@
             <div class="person-card">
                 <div class="person-image">
                     <img src="images/jidapa.jpg" alt="รูปนางสาวจิดาภา"> 
-                    <span style="display: none;">**ใส่รูป** นางสาวจิดาภา</span>
+                    <span style="display: none;">นางสาวจิดาภา</span>
                 </div>
                 <div class="person-name">นางสาวจิดาภา ลีละวัฒนากูล</div>
                 <div class="person-position">เจ้าพนักงานคอมพิวเตอร์</div>
@@ -472,7 +472,7 @@
             <div class="person-card">
                 <div class="person-image">
                     <img src="images/nattanit.jpg" alt="รูปนางสาวณัฏฐนิช"> 
-                    <span style="display: none;">**ใส่รูป** นางสาวณัฏฐนิช</span>
+                    <span style="display: none;">นางสาวณัฏฐนิช</span>
                 </div>
                 <div class="person-name">นางสาวณัฏฐนิช บุญสวน</div>
                 <div class="person-position">เจ้าหน้าที่ป่าไม้</div>
@@ -480,8 +480,17 @@
 
             <div class="person-card">
                 <div class="person-image">
+                    <img src="images/ploypailin.png" alt="นางสาวพลอยไพลิน"> 
+                    <span style="display: none;">นางสาวพลอยไพลิน</span>
+                </div>
+                <div class="person-name">นางสาวพลอยไพลิน อั้นทอง</div>
+                <div class="person-position">เจ้าหน้าที่ป่าไม้</div>
+            </div>
+
+            <div class="person-card">
+                <div class="person-image">
                     <img src="images/kwanphatawan.jpg" alt="รูปนางสาวขวัญพ์ตะวัน"> 
-                    <span style="display: none;">**ใส่รูป** นางสาวขวัญพ์ตะวัน</span>
+                    <span style="display: none;">นางสาวขวัญพ์ตะวัน</span>
                 </div>
                 <div class="person-name">นางสาวขวัญพ์ตะวัน วงศ์ชัยนเรศ</div>
                 <div class="person-position">เจ้าพนักงานธุรการ</div>
@@ -490,7 +499,7 @@
             <div class="person-card">
                 <div class="person-image">
                     <img src="images/nattapol.jpg" alt="รูปนายณัฐพล"> 
-                    <span style="display: none;">**ใส่รูป** นายณัฐพล</span>
+                    <span style="display: none;">นายณัฐพล</span>
                 </div>
                 <div class="person-name">นายณัฐพล บัวสุวรรณ</div>
                 <div class="person-position">เจ้าหน้าที่ธุรการ</div>
