--- a/Structure.html
+++ b/Structure.html
@@ -450,9 +450,9 @@
             </div>
 
             <div class="staff-card">
-                <img class="staff-img" src="images/kedsuda.jpg" alt="นางสาวเกศสุดา เอกนิคม">
-                <div class="staff-name">นางสาวเกศสุดา เอกนิคม</div>
-                <div class="staff-position">นักวิชาการป่าไม้ปฏิบัติการ<br>หัวหน้าฝ่ายแผนและติดตามประเมินผล</div>
+                <img class="staff-img" src="images/none.jpg" alt="นายธนากร กีรติภควัต">
+                <div class="staff-name">นายธนากร กีรติภควัต</div>
+                <div class="staff-position">นักวิชาการป่าไม้ชำนาญการพิเศษ<br>หัวหน้าฝ่ายแผนและติดตามประเมินผล</div>
                 <a href="Planrfdo.html" class="staff-link"><i class="fas fa-chart-line"></i> ดูข้อมูลฝ่าย</a>
             </div>
 
