--- a/Researchrfdo.html
+++ b/Researchrfdo.html
@@ -447,7 +447,7 @@
                     <img src="images/wipawee.png" alt="รูปนางสาววิภาวี"> 
                 </div>
                 <div class="person-name">นางสาววิภาวี กลีบทอง</div>
-                <div class="person-position">นักจัดการทั่วไป</div>
+                <div class="person-position">นักจัดการงานทั่วไป</div>
             </div>
 
             <div class="person-card">
@@ -517,3 +517,4 @@ document.addEventListener('contextmenu', function(e) {
 
 </body>
 </html>
+
