--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
         <div class="section-title">ข่าวประชาสัมพันธ์</div>
         <div class="slideshow-container">
             <div class="slide-track">
+                <div class="slide-item"><img src="images/work27.png" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work26.png" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work25.png" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work24.jpg" class="zoomable"></div>
@@ -513,3 +514,4 @@
 </script>
 </body>
 </html>
+
