--- a/PDrfdo.html
+++ b/PDrfdo.html
@@ -500,7 +500,7 @@
             </div>
 
             <div class="person-card">
-                <div class="person-image"><img src="images/none.jpg" alt="นางสาวมณฑิตา"></div>
+                <div class="person-image"><img src="images/montita.png" alt="นางสาวมณฑิตา"></div>
                 <div class="person-name">นางสาวมณฑิตา หาดสุด</div>
                 <div class="person-position">เจ้าพนักงานการเงินและบัญชี</div>
             </div>
