--- a/Adminrfdo.html
+++ b/Adminrfdo.html
@@ -356,7 +356,7 @@
             </ul>
         </li>
 
-        <li><a href="https://forprod.forest.go.th/forprod/forprod2017/form/default.html" target="_blank">แบบฟอร์ม</a></li>
+        <li><a href="form.html" target="_blank">แบบฟอร์ม</a></li>
         <li><a href="contact.html">ติดต่อ</a></li>
     </ul>
 </nav>
@@ -509,3 +509,4 @@ document.addEventListener('contextmenu', function(e) {
 
 </body>
 </html>
+
