--- a/PDrfdo.html
+++ b/PDrfdo.html
@@ -401,7 +401,7 @@
             </ul>
         </li>
 
-        <li><a href="https://forprod.forest.go.th/forprod/forprod2017/form/default.html" target="_blank">แบบฟอร์ม</a></li>
+        <li><a href="form.html">แบบฟอร์ม</a></li>
         <li><a href="contact.html">ติดต่อ</a></li>
     </ul>
 </nav>
@@ -556,3 +556,4 @@
 
 </body>
 </html>
+
