--- a/Researchrfdo.html
+++ b/Researchrfdo.html
@@ -390,8 +390,7 @@
             </ul>
         </li>
 
-        <li><a href="https://forprod.forest.go.th/forprod/forprod2017/form/default.html" target="_blank">แบบฟอร์ม</a></li>
-
+        <li><a href="form.html">แบบฟอร์ม</a></li>
         <li><a href="contact.html">ติดต่อ</a></li>
     </ul>
 </nav>
@@ -517,4 +516,5 @@ document.addEventListener('contextmenu', function(e) {
 
 </body>
 </html>
+
 
