--- a/Structure.html
+++ b/Structure.html
@@ -365,7 +365,7 @@
                 <li><a href="official_co.html">ระเบียบการจัดทำหนังสือราชการ</a></li>
             </ul>
         </li>
-        <li><a href="https://forprod.forest.go.th/forprod/forprod2017/form/default.html" target="_blank">แบบฟอร์ม</a></li>
+        <li><a href="form.html">แบบฟอร์ม</a></li>
         <li><a href="contact.html">ติดต่อ</a></li>
     </ul>
 </nav>
@@ -464,3 +464,4 @@
 
 </body>
 </html>
+
