--- a/procurement.html
+++ b/procurement.html
@@ -450,8 +450,8 @@
                 </ul>
             </li>
 
-            <li><a href="https://forprod.forest.go.th/forprod/forprod2017/form/default.html" target="_blank">แบบฟอร์ม</a></li>
-            <li><a href="contact.html">ติดต่อ</a></li>
+        <li><a href="form.html">แบบฟอร์ม</a></li>
+        <li><a href="contact.html">ติดต่อ</a></li>
         </ul>
     </nav>
 
@@ -645,4 +645,5 @@
         }
     </script>
 </body>
+
 </html>
