--- a/procurement_plan.html
+++ b/procurement_plan.html
@@ -212,8 +212,8 @@
             <li class="dropdown"><a href="#">คำสั่ง/ประกาศ ▾</a><ul class="dropdown-menu"><li><a href="command.html">คำสั่ง</a></li><li><a href="announce.html">ประกาศ</a></li></ul></li>
             <li class="dropdown"><a href="#">ข่าวสาร ▾</a><ul class="dropdown-menu"><li class="nested-dropdown"><a href="#">จัดซื้อจัดจ้าง ▸</a><ul class="submenu"><li><a href="procurement_plan.html">แผนการจัดซื้อจัดจ้าง</a></li><li><a href="procurement_draft.html">ประกาศร่างขอบเขตของงานฯ</a></li><li><a href="procurement_announce.html">ประกาศจัดซื้อจัดจ้าง</a></li><li><a href="procurement_winner.html">ประกาศผู้ชนะการเสนอราคา</a></li></ul></li><li class="nested-dropdown"><a href="#">ระบบหนังสือเวียนกรมป่าไม้ ▸</a><ul class="submenu"><li><a href="https://edoc.forest.go.th/doccir/docindex.html" target="_blank">หนังสือเวียนกรมป่าไม้</a></li><li><a href="edocs.html">หนังสือเวียน สวพ.</a></li></ul></li></ul></li>
             <li class="dropdown"><a href="#">ระเบียบ ▾</a><ul class="dropdown-menu"><li><a href="procurement_regulations.html">ระเบียบเกี่ยวกับการพัสดุ</a></li><li><a href="official_co.html">ระเบียบการจัดทำหนังสือราชการ</a></li></ul></li>
-            <li><a href="https://forprod.forest.go.th/forprod/forprod2017/form/default.html" target="_blank">แบบฟอร์ม</a></li>
-            <li><a href="contact.html">ติดต่อ</a></li>
+        <li><a href="form.html">แบบฟอร์ม</a></li>
+        <li><a href="contact.html">ติดต่อ</a></li>
         </ul>
     </nav>
 
@@ -308,4 +308,5 @@
         loadData();
     </script>
 </body>
+
 </html>
