--- a/procurement_regulations.html
+++ b/procurement_regulations.html
@@ -340,8 +340,8 @@
                 </ul>
             </li>
 
-            <li><a href="https://forprod.forest.go.th/forprod/forprod2017/form/default.html" target="_blank">แบบฟอร์ม</a></li>
-            <li><a href="contact.html">ติดต่อ</a></li>
+        <li><a href="form.html">แบบฟอร์ม</a></li>
+        <li><a href="contact.html">ติดต่อ</a></li>
         </ul>
     </nav>
 
@@ -415,4 +415,5 @@
 </script>
 
 </body>
+
 </html>
