--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 <li><a href="official_co.html">ระเบียบการจัดทำหนังสือราชการ</a></li>
             </ul>
         </li>
-        <li><a href="form.html">แบบฟอร์ม</a></li>
+        <li><a href="https://forprod.forest.go.th/forprod/forprod2017/form/default.html" target="_blank">แบบฟอร์ม</a></li>
         <li><a href="contact.html">ติดต่อ</a></li>
     </ul>
 </nav>
@@ -194,10 +194,9 @@
             </div>
         </div>
 
-        <div class="section-title">ข่าวประชาสัมพันธ์</div>
+         <div class="section-title">ข่าวประชาสัมพันธ์</div>
         <div class="slideshow-container">
-            <div class="slide-track">
-                <div class="slide-item"><img src="images/work27.png" class="zoomable"></div>
+            <div class="slide-track" id="news-track">
                 <div class="slide-item"><img src="images/work26.png" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work25.png" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work24.jpg" class="zoomable"></div>
@@ -206,9 +205,7 @@
                 <div class="slide-item"><img src="images/work21.png" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work20.jpg" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work19.png" class="zoomable"></div>
-                <div class="slide-item"><img src="images/work18.png" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work17.png" class="zoomable"></div>
-                <div class="slide-item"><img src="images/work16.png" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work15.jpg" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work14.png" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work13.png" class="zoomable"></div>
@@ -228,7 +225,17 @@
             <div class="prev"><i class="fas fa-chevron-left"></i></div>
             <div class="next"><i class="fas fa-chevron-right"></i></div>
         </div>
-        <div class="dots"></div>
+        <div class="dots" id="news-dots"></div>
+
+        <div class="section-title">แนวทาง</div>
+        <div class="slideshow-container" id="guideline-container">
+            <div class="slide-track" id="guideline-track">
+                <div class="slide-item"><img src="images/work27.png" class="zoomable"></div>
+                <div class="slide-item"><img src="images/work18.png" class="zoomable"></div>
+                <div class="slide-item"><img src="images/work16.png" class="zoomable"></div>
+            </div>
+        </div>
+        <div class="dots" id="guideline-dots"></div>
 
         <div class="section-title">สื่อวีดิทัศน์</div>
         <div class="video-wrapper">
@@ -514,5 +521,3 @@
 </script>
 </body>
 </html>
-
-
