--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <p>ผู้อำนวยการส่วนอำนวยการ</p>
         </div>
         <div class="sidebar-card">
-            <h3 class="news-header"><i class="fas fa-bullhorn" style="margin-right: 8px;"></i> ประชาสัมพันธ์</h3>
+            <h3 class="news-header"><i class="fas fa-bullhorn" style="margin-right: 8px;"></i> ข่าวประชาสัมพันธ์ล่าสุด</h3>
             <ul class="news-list" id="newsList"></ul>
         </div>
         <div class="sidebar-links">
@@ -521,3 +521,4 @@
 </script>
 </body>
 </html>
+
