--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
          <div class="section-title">ข่าวประชาสัมพันธ์</div>
         <div class="slideshow-container">
             <div class="slide-track" id="news-track">
-                <div class="slide-item"><img src="images/work28.png" class="zoomable"></div>
+                <div class="slide-item"><img src="images/work28.jpg" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work26.png" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work25.png" class="zoomable"></div>
                 <div class="slide-item"><img src="images/work24.jpg" class="zoomable"></div>
@@ -650,4 +650,5 @@
 </script>
 </body>
 </html>
+
 
